Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20464

Clang: "Remove All Splits" leads to ignored/postponed clangbackend jobs (no reparse, completion, ...)

XMLWordPrintable

      Reproducible with

      1. Open two files/documents side by side
      2. Use Menu: Window -> Remove All Splits
        ==> From now on all clangbackend jobs are ignored/postponed (no reparse, no completion, ...)

      Observations:

      1. ModelManagerSupportClang::ModelManagerSupportClang() connects to Core::EditorManager::editorsClosed
      2. In the corresponding slot Core::EditorManager::visibleEditors() is called, which yields an empty list for the "Remove All Splits" case - as a result no visible documents are propagated to the clangbackend and so it ignored all jobs. Expected: Since one document is visible afterwards, it should be reported as visible here, too.

      This happens since

      commit 80ae992c91985389f6d870ac0201c16d895bc5cc
      Clang: Fix another crash when closing document

      where the connection was changed from queued to normal.

        For Gerrit Dashboard: QTCREATORBUG-20464
        # Subject Branch Project Status CR V

            con Eike Ziller
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes